--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>SMILE IF YOU MASTURBATE</>
+	<h1>SMILE IF YOU MASTURBATE</h1>
     <p class="introduction">GIT informacje podstawowe - pracujemy online na Google Meet</p>
     <p class="mainPart">Główna część zajęć - praca z repozytorium zdalnym GITHUB</p>
     <p class="ending">Zakończenie zajęć powinno dawać taki efekt</p>
