--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores illo voluptates ut minus! Deserunt vero nemo fugiat fugit nobis quasi beatae mollitia qui illo vel voluptatem, modi eveniet accusantium ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ratione perferendis dicta ex numquam fugiat at expedita provident illo distinctio odio. Pariatur voluptates quo aliquid incidunt aperiam exercitationem velit harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime vitae, animi autem molestias voluptates reprehenderit libero recusandae ducimus impedit fugit ab facere asperiores quibusdam fuga vel sunt exercitationem, hic molestiae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, repellendus in fuga amet unde aliquid quia recusandae nihil sunt impedit pariatur deleniti consequatur aut optio architecto. Ab animi dolorum eius!
     <p class="introduction">GIT informacje podstawowe - pracujemy online na Google Meet</p>
     <p class="mainPart">Główna część zajęć - praca z repozytorium zdalnym GITHUB</p>
     <p class="ending">Zakończenie zajęć powinno dawać taki efekt</p>
