--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p class="introduction">GIT informacje podstawowe - pracujemy online na Google Meet</p>
     <p class="mainPart">Główna część zajęć - praca z repozytorium zdalnym GITHUB</p>
+    <p class="change">Zmiana Darii</p>
     <p class="ending">Zakończenie zajęć powinno dawać taki efekt</p>
 </body>
 </html>
